css/style.css
body {
  /*border : 2px dashed black;*/
  margin : 0 auto;
  background-image: url("../images/vintage-concrete.png");
  font-family : 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
  line-height: 1.5;
  /*position : relative;*/
} 

header {
  width : 100%;  
  background-color: #ffffff;
}

.container_header { 
  /*border : 2px solid #cccccc;*/
  width : 960px;
  overflow: auto;
  background-color: #ffffff;
  margin : 0 auto;
}

.container_content {
  /*border : 2px dashed #cccccc;*/
  width : 960px;
  overflow: auto;
  /*background-color: #ffffff;*/
  margin : 30px auto;
}

#name {
  /*border : 2px solid black;*/
  color : white;
  font-size: 30px;
  font-weight: bold;
  background : #4aaaa5;
  padding : 20px 15px;
  width : 30%;
  text-align : center;
  float : left;
  font-family: 'Georgia', Times, Times New Roman, serif;
}

nav {
  /*width : 270px;*/
  width : 36%;
  float : right;
  overflow : auto;
  padding : 31px 0px;
  margin-right : -70px;
}

.nav {
  float : left;
  /*border-right : 1px solid #cccccc;*/
  width : 28%;
  padding : 0px 0px;
  margin : 0px auto;
  text-align: center; 
}

a {
  white-space: normal;
}

.nav.contact {
  border : 0;
}

.main_content {
  clear : both;
  float : left;
  border : 1px solid #dddddd;
  background-color: #ffffff;
  width : 70%;
  /*width : 650px;*/
  /*height : 500px;*/
  overflow : auto;
  padding-bottom : 20px; 
  /*border : 1px solid green; */
}

.main_content_wrapper {
  /*border : 1px dashed blue;*/
  width : 90%;
  padding : 0px ;
  margin : 0px auto;
}

.aside_wrapper {
  width : 95%;
  margin : 0px auto;
}

aside {
  border : 1px solid #dddddd;
  background-color: #ffffff;
  float : right;
  width : 25%;
  overflow : auto;
  padding-bottom : 20px;
}

footer {
  
  clear : both;
  /*border : 1px solid black;*/
  /*width : 960px;*/
  position: fixed;
  bottom : 0;
  width : 100%;
  z-index : 5;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Georgia', Times, Times New Roman, serif;
  color : #4aaaa5;
  font-weight : bold
}

h1 {
  margin-top: 20px;
  margin-bottom: 20px;
  /*margin-left: 20px;*/
  font-size : 25px;
}

h3 {
  font-size : 20px;
}

p , form {
  color : #777777;
  font-size : 17px;
  margin-bottom : 5px;
}

p + p {
  margin-top : 10px;
}

.my_pic {
  height : 200px;
  width : 200px;
  float : left;
  margin : 0px 20px 10px 20px;
  display : inline;
}

#p1 {
  width : 280px;
  display: inline;
}

#p2 {
  clear : both;
}

#footer_div1 {
  background-color : #4aaaa5;
  height : 10px;
}

#footer_div2 {
  font-family : 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
  background-color: #666666;
  font-size : 12px;
  color : #cccccc;
  text-align : center;
  padding : 20px 0px;
  margin : 0px;
}

a {
  color : #cccccc;
  text-decoration : none;
}

#social_media {
  /*border : 1px solid blue;*/
  /*padding : 0px 0px;*/
  margin : 0 auto;
  width : 100%;
  padding-left : 1px; 
}

.social_media_icons {
 /* width : 50px;
  height : 50px;*/
  width : 27%;
  height : 27%;
  /*border : 1px solid blue;*/
  margin : 5px;
}

#connect {
  /*border : 1px solid black;*/
  text-align : center;
  margin : 20px auto;
}

hr {
  color : #cccccc;
  size : 5;
  margin-bottom : 15px;
}

.formtext {
  width : 500px;
}

.messagetext {
  width : 500px;
  height : 100px;
}

input[value] {
  color : gray;
}

input[name="submit"] {
  width : 130px;
  height : 50px;
  background-color: #4aaaa5;
  color : white;
  font-size : 15px;
}

.portfolio_section {
  /*border-top : 1px solid black;
  border-right : 1px solid black;
  border-left : 1px solid black;*/
  width : 100%;
  /*height : 25%;*/
  position : relative;
}

.portfolio_container {
  /*border : 1px solid black;*/
  /*position : relative;*/
  overflow : hidden;
}

#portfolio1, #portfolio3, #portfolio5 {
  width : 45%;
  position : relative;
  /*position : absolute;
  top : 0px;
  left : 0px;*/
}

#portfolio2, #portfolio4 {
  width : 45%;
  position : absolute;
  top : 0px;
  right : 0px;
}

.portfolio_img {
  width : 100%;
  height : 95%;
  position : relative;
  z-index : 1;
}

.portfolio_container p {
  z-index : 2;
  background-color: #4aaaa5;
  color : white;
  /*border : 1px solid black;*/
  text-align : center;
  padding : 8px;
  font-family: 'Georgia', Times, Times New Roman, serif;
  position : absolute;
  bottom : 10px;
  width : 100%;

}

@media screen and (max-width: 980px) {

  .container_header {
    width : 730px;
    height : 90px;
  }

  #name {
    font-size: 22px;
    width : 33%;
    padding : 30px 15px;
  }

  nav {
    padding : 0px 0px;
    width : 33%;
    margin : 32px -45px 0px 0px;
  }

  a {
    font-size : 13px;
  } 
 
  .container_content {
    width : 730px;
    /*border : 1px solid black;*/
  }

  .main_content {
    width : 60%;
    /*width : 650px;*/
    /*height : 500px;*/
    overflow : auto;
  }

  .main_content_wrapper {
    width : 85%;
  }

  h1 {
    font-size: 25px; 
  }

  h3 {
    font-size : 20px;
  }

  .my_pic {
    height : 280px;
    width : 100%;
    margin : 0px 0px 20px 0px;
    display : block;
  }

  aside {
    width : 35%;
  }

  .aside_wrapper {
    width : 85%;
  }

  #social_media {
    padding-left : 6px;
  }

  .social_media_icons {
    margin : 3px;
  }

  p , form {
    font-size : 17px;
  }

  #main_container {
    margin-bottom : 70px;
  }

  hr {
  color : #cccccc;
  size : 5;
  margin-bottom : 15px;
}

  .formtext {
    width : 100%;
    height : 20px
  }

  .messagetext {
    width : 100%;
    height : 150px;
  }

  input {
    margin-bottom : 10px;
  } 


  input[name="submit"] {
    width : 95px;
    height : 35px;
    font-size : 14px;
    margin : 10px 0px;
    color : white;
  }

  .portfolio_section {
    height : 350px; 
  }

  .portfolio_container {
    margin : 10px auto;
  }

  #portfolio1, #portfolio3, #portfolio5 {
    width : 95%; 
    height : 48%;
  }

  #portfolio2, #portfolio4 {
    width : 95%; 
    height : 48%;
    top : 170px;
    right : 6px;
  }

  footer {
    height : 67px;
  }

  #footer_div1 {
    height : 6px;
  }

}

@media screen and (max-width: 768px) {

  .container_header {
  /*width : 505px;
  height : 65px;*/
  width : 620px;
  height : 80px;
  }

  #name {
  font-size: 16px;
  width : 33%;
  padding : 30px 15px;
  }

  nav {
    padding : 0px;
    margin : 30px -50px 30px 0px;
    width : 40%;
  }

  a {
    font-size : 12px;
  } 

  .container_content{
    /*width : 505px;*/
    width : 620px;
  }

  .main_content {
    width : 100%;
    overflow : auto;
  }

  .my_pic {
    height : 175px;
    width : 230px;
    margin : 0px 20px 10px 0px;
    display : block;
  }

   p , form {
    font-size : 15px;
  }

  aside {
    width : 100%;
    height : 140px;
    display : block;
    margin : 20px auto;
  }

  h3 {
    text-align : left;
  }
 

  .social_media_icons {
    width : 10%;
    margin: 0px 2px 0px 0px;
  }

  #social_media {
    padding-left : 0px;
  }

  .formtext {
    width : 100%;
  }

  .messagetext {
    width : 100%;
  }


/*.  DEF
portfolio_section {
  border-top : 1px solid black;
  border-right : 1px solid black;
  border-left : 1px solid black;
  width : 100%;
  position : relative;
}

--980 style
.portfolio_section {
    height : 350px; 
  }


  .portfolio_container {
    margin : 10px auto;
    overflow : hidden;
  }

  #portfolio1, #portfolio3, #portfolio5 {
  width : 45%;
  position : relative;
  /*position : absolute;
  top : 0px;
  left : 0px;

  --980
  width : 95%;
  height : 48%;
}

--def
#portfolio2, #portfolio4 {
  width : 45%;
  position : absolute;
  top : 0px;
  right : 0px;
}

--980
  #portfolio2, #portfolio4 {
    width : 95%; 
    height : 48%;
    top : 170px;
    right : 6px;
  }
*/

  .portfolio_section {
    height : 150px; 
    /*border : 1px solid black;*/
  }

  .portfolio_container {
    margin : 5px auto;
  }

  #portfolio1, #portfolio3, #portfolio5 {
    width : 47%;
    height : 140px;
    position : absolute;
    top : 0;
    left : 2px;
  }

  #portfolio2, #portfolio4 {
    width : 47%;
    height : 140px;
    top : 0;
    right : 2px;
  }


@media screen and (max-width: 640px) {

  .container_header {  
    width : 100%;  
    height : 73px;
  }

  #name {
    width : 100%;
    display : block;
    height : 50%;
    padding : 10px 0px 0px 0px;
    font-size: 16px;
  }

  nav {
    height : 40%;
    display : block;
    margin : 0px 185px;
    width : 270px;
    padding : 0px auto;
  }

  .nav {
    width : 33%;
  }

  .container_content{
    width : 270px;
  }

  h1 {
    font-size : 15px;
  }

  h3 {
    font-size : 12px;
  }
  .my_pic {
    height : 185px;
    width : 230px;
    margin : 0px;
    display : block;
    margin-bottom : 10px;
  }

  p , form {
    font-size : 10px;
  }

  #p1 , #p2 {
    font-size : 10px;
    line-height : 2; 
  }

  aside {
    height : 100px;
    margin : 20px auto;
    padding-bottom : 10px ;
  }

  .social_media_icons {
    width : 15%;
    margin: 0px 2px 0px 0px;
  }

  #connect {
    margin : 15px 0px 15px 0px;
  }

  input[name="submit"] {
    width : 65px;
    height : 23px;
    font-size : 10px;
  }

  footer {
    height : 48px;
  }

  #footer_div1 {
    height : 7px;
  }

  #footer_div2 {
    font-size : 6px;
  }




}

